deploy/dev/openframe-microservices/openframe-client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openframe-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openframe-client
  template:
    metadata:
      labels:
        app: openframe-client
    spec:
      imagePullSecrets:
        - name: github-pat-secret

      containers:
        - name: openframe-client
          image: openframe-client
          ports:
            - containerPort: 8097
              name: http
            - containerPort: 8102
              name: management
          livenessProbe:
            httpGet:
              path: /management/v1/health
              port: management
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /management/v1/health
              port: management
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.5"
            limits:
              memory: "1Gi"
              cpu: "1"
