deploy/dev/openframe-microservices/openframe-client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openframe-client
  annotations:
    cert-manager.io/cluster-issuer: "cluster-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - openframe-client.192.168.100.100.nip.io
      secretName: openframe-client-tls-secret
  rules:
    - host: openframe-client.192.168.100.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openframe-client
                port:
                  name: http
